# ModuleSample

./: gradle.properties  settings.gradle
gradle/: libs.versions.toml
module/: build.gradle
module/src/main/java/com/v7878/zygisk/sample/: Main.java  MethodAndArgsCallerHook.java
module_java_only/: build.gradle  proguard-rules.pro
module_java_only/src/main/java/com/v7878/zygisk/sample/: ApplicationInit.java  EntryPoint.java  LoadedApkHook.java  Main.java
module_with_jni/: build.gradle
module_with_jni/src/main/cpp/: CMakeLists.txt  sample.cpp
module_with_jni/src/main/java/com/v7878/zygisk/sample/: EntryPoint.java  Main.java  SystemServerInit.java
